--- a/package.json
+++ b/package.json
@@ -7,11 +7,45 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "ios:build": "cd ios && xcodebuild -workspace UserRegisterApp.xcworkspace -scheme UserRegisterApp -configuration Release -sdk iphoneos -derivedDataPath build"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.12.1",
+    "@react-native-community/datetimepicker": "^7.6.2",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/drawer": "^6.6.6",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
+    "@react-navigation/stack": "^6.3.20",
+    "@reduxjs/toolkit": "^2.0.1",
+    "@tanstack/react-query": "^5.17.9",
+    "@types/react-native-vector-icons": "^6.4.18",
+    "axios": "^1.6.5",
+    "formik": "^2.4.5",
+    "moment": "^2.30.1",
     "react": "18.2.0",
-    "react-native": "0.73.2"
+    "react-hook-form": "^7.49.3",
+    "react-native": "0.73.2",
+    "react-native-async-storage": "^0.0.1",
+    "react-native-country-picker-modal": "^2.0.0",
+    "react-native-date-picker": "^4.3.5",
+    "react-native-document-picker": "^9.1.0",
+    "react-native-dropdown-picker": "^5.4.6",
+    "react-native-element-dropdown": "^2.10.1",
+    "react-native-gesture-handler": "^2.14.0",
+    "react-native-image-picker": "^7.1.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-modal-datetime-picker": "^7.6.1",
+    "react-native-paper": "^5.11.7",
+    "react-native-reanimated": "^3.6.1",
+    "react-native-reanimated-table": "^0.0.2",
+    "react-native-safe-area-context": "^4.8.2",
+    "react-native-screens": "^3.29.0",
+    "react-native-vector-icons": "^10.0.3",
+    "react-native-vision-camera": "^3.7.0",
+    "react-redux": "^9.0.4",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
